fix mobile positioning on mobile

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -747,7 +747,7 @@ opacity: 1;
     height: unset;
     margin: 1.75rem 0 1.75rem 1.5rem;
     top: 0 !important;
-    left: 0 !important;
+    right: 0 !important;
     padding-left: 4rem;
   }
 
